feat: Update contact section and metadata
Introduces background image for the contact section, improving visual appeal and user experience. Updates project metadata and optimizes image preloading for faster load times. Refines text content for clarity and impact.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Preload da imagem de fundo do Hero -->
     <link rel="preload" as="image" href="https://i.ibb.co/hFLv9wqX/IMG-0060.jpg">
     
+    <!-- Preload da imagem de fundo do Contato -->
+    <link rel="preload" as="image" href="https://i.ibb.co/Qqcsjv8/MG-1117.jpg">
+    
     <!-- Preload das imagens críticas de portfólio (Destaque) -->
     <link rel="preload" as="image" href="https://i.ibb.co/CpWyhttP/MG-3539.jpg">
     <link rel="preload" as="image" href="https://i.ibb.co/YF82FPX5/IMG-0712-1.jpg">
