--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
   <script type="importmap">
 {
   "imports": {
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "framer-motion": "https://esm.sh/framer-motion@^12.28.1",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "framer-motion": "https://esm.sh/framer-motion@^12.28.1"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
@@ -83,7 +83,6 @@
   <body>
     <div id="root"></div>
     <div class="scanlines"></div>
-    <!-- Vite gerenciará as dependências através do import no TSX -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
